--- a/src/OtherComponents/style.css
+++ b/src/OtherComponents/style.css
@@ -33,7 +33,6 @@ body {
 
 #home-title {
     width:100%;
-    height:100%;
     color:white;
 
     display: flex;
@@ -161,12 +160,12 @@ footer {
     color:white;
 }
 
-footer a, footer i {
+footer i {
     text-decoration: none;
     color:white;
 }
 
-footer a:visited, footer i:visited {
+footer i:visited {
     color:white;
 }
 
@@ -216,6 +215,14 @@ footer a:visited, footer i:visited {
         margin:15px;
         font-size: 3.25rem;
         color:rgb(34, 25, 93);
+    }
+
+    footer h1 {
+        font-size: 1.2rem;
+    }
+
+    footer ul {
+        width:35%;
     }
 }
 
@@ -279,5 +286,17 @@ footer a:visited, footer i:visited {
 
     #home-social-icons a {
         font-size: 2.5rem;
+    }
+
+    footer h1 {
+        margin-left:10px;
+    }
+
+    footer ul {
+        width:80%;
+    }
+
+    footer i {
+        visibility: hidden;
     }
 }
