--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
 
 * {
@@ -23,8 +24,8 @@ nav {
 }
 
 nav h1 {
-    font-family: 'Aharoni';
-    font-size: 2.25rem;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.8rem;
 }
 
 nav ul {
@@ -149,6 +150,7 @@ nav li {
     }
 
     nav h1 {
+        font-size: 1.5rem;
         margin:0 7.5px;
     }
 
