--- a/src/OtherComponents/style.css
+++ b/src/OtherComponents/style.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap');
-@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
-
 * {
     box-sizing: border-box;
     font-family: 'Roboto Slab', serif;
@@ -52,8 +49,8 @@ body {
 }
 
 #home-title h1 {
-    font-family: 'Aharoni';
-    font-size: 6.5rem;
+    font-family: 'Poppins', sans-serif;
+    font-size: 5.5rem;
 }
 
 #home-header-div {
@@ -160,6 +157,10 @@ footer {
     color:white;
 }
 
+footer h1 {
+    font-family: 'Poppins', sans-serif;
+}
+
 footer i {
     text-decoration: none;
     color:white;
@@ -179,7 +180,11 @@ footer i:visited {
     }
 
     #home-title h1 {
-        font-size: 4rem;
+        font-size: 3.5rem;
+    }
+
+    #home-title h2 {
+        font-size: 1.2rem;
     }
 
     .home-section-title {
@@ -239,11 +244,15 @@ footer i:visited {
     }
 
     #home-title h1 {
-        font-size: 3rem;
+        font-size: 2.7rem;
+    }
+
+    #home-title h2 {
+        font-size: 1rem;
     }
 
     .home-section-title {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
     }
 
     #home-brief-goal {
@@ -286,6 +295,10 @@ footer i:visited {
 
     #home-social-icons a {
         font-size: 2.5rem;
+    }
+
+    footer {
+        justify-content: left;
     }
 
     footer h1 {
