--- a/src/OtherComponents/style.css
+++ b/src/OtherComponents/style.css
@@ -258,6 +258,101 @@ footer i:visited {
     height:100%;
 }
 
+/* Our Team */
+
+#ourTeam-header {
+    width:100%;
+    height:500px;
+    background-color: rgb(34, 25, 93);
+    color:white;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#ourTeam-section {
+    width:100%;
+    height:auto;
+
+}
+
+/* Contact Us */
+#contact-background {
+    width:100%;
+    height:calc(100vh - 150px);
+    background: url('https://wallpapercave.com/wp/wp3517970.jpg') no-repeat center / cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#contact-background section {
+    background-color: rgba(5, 57, 109, 0.95);
+    width:50%;
+    height:80%;
+}
+
+#contact-title-div {
+    width:100%;
+    height:50px;
+    background-color: rgb(43, 113, 115);
+    color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#form-div {
+    width:100%;
+    height:calc(100% - 50px);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#form-div form {
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#form-div input, #form-div textarea {
+    background:none;
+    border:none;
+    border-bottom: 1px solid grey;
+    color:white;
+    font-size: 1rem;
+    width:80%;
+    height:30px;
+    margin:5px;
+}
+
+#form-div textarea {
+    height:100px;
+    resize:none;
+}
+
+#form-div ::placeholder {
+    color:white;
+}
+
+#form-div button {
+    background-color: rgb(94, 101, 108);
+    color:white;
+    border:none;
+    border-radius:5px;
+    font-size: 1rem;
+    width:50%;
+    padding:10px 5px;
+    margin:20px;
+}
+
 @media (max-width:875px) {
     footer h1 {
         font-size: 1.2rem;
