Created manage team components

--- a/src/OtherComponents/Administrator/admin.css
+++ b/src/OtherComponents/Administrator/admin.css
@@ -1,15 +1,20 @@
-#adminContact-header {
+/* Admin Contact Page */
+
+.admin-header {
     width:100%;
     height:250px;
-    background-color: rgb(34, 25, 93);
-    color:white;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 20px;
 }
 
-#adminContact-container {
+#admin-contact {
+    background-color: rgb(34, 25, 93);
+    color:white;
+}
+
+.admin-card-container {
     width:90%;
     display: flex;
     flex-flow: wrap;
@@ -20,7 +25,7 @@
     border-radius: 10px;
 }
 
-#adminContact-noMessages {
+.admin-nothing-found {
     width:500px;
     display: flex;
     align-items: center;
@@ -74,13 +79,79 @@
     background-color:rgba(247, 102, 102, 0.9);
 }
 
+/* Admin Team Page */
+#admin-team {
+    background-color:rgb(43, 151, 141);
+}
+
+.team-card {
+    position: relative;
+    width:375px;
+    height:auto;
+    background-color:grey;
+    border-left:7.5px groove rgb(34, 25, 93);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin:5px;
+    padding:10px;
+}
+
+.team-card #content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom:40px;
+}
+
+.team-card #content div {
+    margin: 10px;
+}
+
+.team-card img {
+    max-width:175px;
+    max-height: 175px;
+    width:100px;
+    height:100px;
+}
+
+.team-card b {
+    font-weight: 700;
+}
+
+.team-card #buttons {
+    width:90%;
+    position: absolute;
+    bottom:0;
+    margin-top:5px;
+    display: flex;
+    justify-content: center;
+}
+
+.team-card button {
+    width:75px;
+    padding:7px 3px;
+    margin:0 5px;
+}
+
+.team-card #edit {
+    border:1px solid black;
+    background-color:lightgray;
+}
+
+.team-card #delete {
+    border:1px solid black;
+    background-color:rgba(247, 102, 102, 0.9);
+}
+
 @media (max-width:575px) {
-    #adminContact-noMessages {
+    .admin-nothing-found {
         width:90%;
         font-size: 0.9rem;
     }
 
-    #adminContact-container {
+    .admin-card-container {
         width:100%;
         padding:5px;
         border:none;
