--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,13 @@ nav li {
     color:black;
 }
 
+#sign-in-div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border:1px solid red;
+}
+
 .social-icons a {
     margin:0 10px;
     font-size: 2rem;
