--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
 
@@ -27,6 +27,7 @@ nav {
 nav h1 {
     font-family: 'Poppins', sans-serif;
     font-size: 1.8rem;
+    color:rgb(34, 25, 93);
 }
 
 nav ul {
@@ -41,8 +42,11 @@ nav li {
 
 #nav-links a {
     text-decoration: none;
-    color:black;
-    border-bottom:1px solid black;
+    border-bottom:1px solid rgb(43, 151, 141);
+}
+
+#nav-links a:hover {
+    color:#DD70EA !important;
 }
 
 #nav-links a:visited {
